--- a/resources.css
+++ b/resources.css
@@ -62,7 +62,7 @@ body {
 }
 
 .nav-container {
-    max-width: 1200px;
+    max-width: 100vw;
     margin: 0 auto;
     padding: 0 20px;
     display: flex;
@@ -603,10 +603,12 @@ body {
     width: 40px;
     height: 40px;
     background: var(--bg-color);
-    color: var(--text-secondary);
+    /* color: var(--text-secondary); */
     border-radius: 50%;
     text-decoration: none;
     transition: var(--transition);
+    background-color: #fff;
+    color: black;
 }
 
 .social-links a:hover {
