--- a/about.css
+++ b/about.css
@@ -340,7 +340,7 @@
             width: 100%;
             height: 100%;
             pointer-events: none;
-            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
+            background: linear-gradient(135deg, #262e87, #8f2770);
             transform: translate3d(0, 101%, 0);
             transition: transform 0.6s cubic-bezier(0.19, 1, 0.22, 1);
         }
@@ -1167,7 +1167,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            transition: all 0.3s ease;
+            transition: all 0.1s ease;
         }
 
         .feature-card:hover {
@@ -1179,7 +1179,7 @@
             font-size: 3rem;
             color: var(--primary-color);
             margin-bottom: 1rem;
-            transition: all 0.3s ease;
+            transition: all 0.1s ease;
         }
 
         .feature-card:hover .feature-icon {
@@ -1502,7 +1502,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            transition: all 0.3s ease;
+            transition: all 0.1s ease;
         }
 
             .feature-card .feature-icon {
